@@ -3,6 +3,9 @@ CHANGES
 =======
 1.4.8 (unreleased)
 ------------------
+* update Products.PloneGetPaid [larubbio]
+* update getpaid.formgen [larubbio]
+* update getpaid.SalesforcePloneFormGenAdapter [larubbio]
 
 1.4.7 (2009-05-27)
 ------------------
